fix(responsiveness): improved dropdown on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -595,4 +595,18 @@ body.dark-mode #about-section {
 	.corner {
 		display: none;
 	}
+	.sort-options {
+		display: flex;
+		flex-direction: column;
+		align-items: stretch;
+		gap: 0.5rem;
+		padding: 0 0.5rem;
+	}
+
+	#sort-select,
+	#channel-select {
+		width: 100%;
+		font-size: 1rem;
+		padding: 0.5rem;
+	}
 }
